--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <html lang="ja"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <!--[if IE]>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>html base</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
